force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>Payment Apollo</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>