force-app/main/default/objects/Payment__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Registration_number__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>