force-app/main/default/objects/Payment__c/fields/Registration_number__c.field-meta.xml
<CustomField>
    <fullName>Registration_number__c</fullName>
    <label>Registration number</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Payment</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>